<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUp_Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/reg_button"
            android:layout_marginBottom="15dp"
            android:background="@drawable/fragment_bg">

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reg_button"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_outlook"
            android:fontFamily="@font/work_sans"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Heading_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/alata"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:text="@string/create_an_n_account"
            android:textColor="@color/theme"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/cabin"
            android:paddingTop="15dp"
            android:textStyle="bold"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_below="@id/Heading_2"/>

        <EditText
            android:id="@+id/Reg_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Name"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:autofillHints="name"
            android:drawableEnd="@drawable/user_24"
            android:hint="@string/john_doe"
            android:inputType="textPersonName"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/Reg_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/cabin"
            android:paddingTop="15dp"
            android:textStyle="bold"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_below="@id/Reg_Name"/>

        <EditText
            android:id="@+id/Register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Reg_Email"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:autofillHints="emailAddress"
            android:drawableEnd="@drawable/mail_24"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/Contact_No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Register_email"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/cabin"
            android:paddingTop="15dp"
            android:text="@string/contact_no"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Contact_No"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_showNameCode="true"
            app:ccp_textSize="18sp" />

        <EditText
            android:id="@+id/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Contact_No"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_toEndOf="@id/countryPicker"
            android:autofillHints="phone"
            android:drawableEnd="@drawable/phone_24"
            android:hint="@string/_9876543210"
            android:inputType="phone"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/Register_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/countryPicker"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/cabin"
            android:paddingTop="15dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Register_Password"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:autofillHints="password"
            android:drawableEnd="@drawable/lock_24"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Reg_password"
        android:layout_marginTop="16dp"
        android:layout_marginStart="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Reg_password"
            android:layout_marginTop="20dp"
            android:text="@string/Terms_and_Conditions"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:textColor="#656363"/>

        <TextView
            android:id="@+id/SignIn_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="#656363"
            android:textSize="16sp" />

    </RelativeLayout>
</FrameLayout>